@@ -24,7 +24,6 @@ class line3d
 		line3d() : start(0,0,0), end(1,1,1) {};
 		line3d(T xa, T ya, T za, T xb, T yb, T zb) : start(xa, ya, za), end(xb, yb, zb) {};
 		line3d(const vector3d<T>& start, const vector3d<T>& end) : start(start), end(end) {};
-		line3d(const line3d<T>& other) : start(other.start), end(other.end) {};
 
 		// operators
 
@@ -39,13 +38,13 @@ class line3d
 
 		// functions
 
-		void setLine(const T& xa, const T& ya, const T& za, const T& xb, const T& yb, const T& zb){start.set(xa, ya, za); end.set(xb, yb, zb);}
-		void setLine(const vector3d<T>& nstart, const vector3d<T>& nend){start.set(nstart); end.set(nend);}
-		void setLine(const line3d<T>& line){start.set(line.start); end.set(line.end);}
+		void setLine(const T& xa, const T& ya, const T& za, const T& xb, const T& yb, const T& zb) {start.set(xa, ya, za); end.set(xb, yb, zb);}
+		void setLine(const vector3d<T>& nstart, const vector3d<T>& nend) {start.set(nstart); end.set(nend);}
+		void setLine(const line3d<T>& line) {start.set(line.start); end.set(line.end);}
 
 		//! Returns length of line
 		//! \return Returns length of line.
-		f64 getLength() const { return start.getDistanceFrom(end); };
+		T getLength() const { return start.getDistanceFrom(end); };
 
 		//! Returns sqared length of line
 		//! \return Returns sqared length of line.
@@ -79,8 +78,10 @@ class line3d
 			v /= d;
 			T t = v.dotProduct(c);
 
-			if (t < (T)0.0) return start;
-			if (t > d) return end;
+			if (t < (T)0.0)
+				return start;
+			if (t > d)
+				return end;
 
 			v *= t;
 			return start + v;
@@ -88,19 +89,19 @@ class line3d
 
 		//! Returns if the line intersects with a shpere
 		//! \param sorigin: Origin of the shpere.
-		//! \param sradius: Radius if the sphere.
+		//! \param sradius: Radius of the sphere.
 		//! \param outdistance: The distance to the first intersection point.
 		//! \return Returns true if there is an intersection.
 		//! If there is one, the distance to the first intersection point
 		//! is stored in outdistance.
 		bool getIntersectionWithSphere(vector3d<T> sorigin, T sradius, f64& outdistance) const
 		{
-			vector3d<T> q = sorigin - start;
-			f64 c = q.getLength();
-			f64 v = q.dotProduct(getVector().normalize());
-			f64 d = sradius * sradius - (c*c - v*v);
+			const vector3d<T> q = sorigin - start;
+			T c = q.getLength();
+			T v = q.dotProduct(getVector().normalize());
+			T d = sradius * sradius - (c*c - v*v);
 
-			if (d < 0.0) 
+			if (d < 0.0)
 				return false;
 
 			outdistance = v - sqrt(d);
@@ -108,12 +109,12 @@ class line3d
 		}
 
 		// member variables
-		
+
 		vector3d<T> start;
 		vector3d<T> end;
 };
 
-	//! Typedef for a f32 line.
+	//! Typedef for an f32 line.
 	typedef line3d<f32> line3df;
 	//! Typedef for an integer line.
 	typedef line3d<s32> line3di;
